@@ -3,6 +3,8 @@ package com.eric.onlineresourcemanagementsys.resource_management;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
@@ -21,8 +23,9 @@ public class ResourceManagerTest {
         resourceManager.addResource(gameAccount);
 
         // Verify that the resource was added
-        assertEquals(1, resourceManager.getResources().size(), "Resource list should contain one resource");
-        assertEquals(gameAccount, resourceManager.getResources().getFirst(), "The added resource should match");
+        List<Resource> resources = resourceManager.getResources();
+        assertEquals(1, resources.size(), "Resource list should contain one resource");
+        assertEquals(gameAccount, resources.get(0), "The added resource should match");
     }
 
     @Test
@@ -35,5 +38,32 @@ public class ResourceManagerTest {
         Resource retrievedResource = resourceManager.getResource("Netflix");
         assertNotNull(retrievedResource, "Resource should be found by name");
         assertEquals(subscription, retrievedResource, "Retrieved resource should match the added resource");
+    }
+
+    @Test
+    void testGetNonExistentResource() {
+        // Attempt to retrieve a resource that doesn't exist
+        Resource resource = resourceManager.getResource("NonExistentResource");
+
+        // Verify that null is returned
+        assertEquals(null, resource, "Retrieving a non-existent resource should return null");
+    }
+
+    @Test
+    void testRemoveResource() {
+        // Add a resource
+        Subscription subscription = new Subscription("Netflix", "user2", "pass2", "Streaming");
+        resourceManager.addResource(subscription);
+
+        // Remove the resource
+        resourceManager.removeResource(subscription);
+
+        // Verify the resource list is empty
+        List<Resource> resources = resourceManager.getResources();
+        assertEquals(0, resources.size(), "Resource list should be empty after removing the resource");
+
+        // Verify the resource can no longer be retrieved
+        Resource retrievedResource = resourceManager.getResource("Netflix");
+        assertEquals(null, retrievedResource, "Removed resource should not be retrievable");
     }
 }
